# AysieElf-Games-Frontend

./: .gitignore  README.md  env.production  handy.md  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  tailwind.config.js
backend/: .env_template  main.py  requirements.txt
backend/database/: create_database.sql  schema.sql  session.py
backend/src/api/v1/: routes.py
backend/src/api/v1/endpoints/: health.py
backend/src/core/: config.py
backend/src/models/: base.py
coming-soon/: index.html
coming-soon/public/assets/plant/: plant.aseprite
coming-soon/src/: index.css  main.jsx
coming-soon/src/components/decor/: CozyWindow.jsx  PlantDecor.jsx
coming-soon/src/components/hero/: Hero.jsx
frontend/coming-soon/: package-lock.json  package.json  tailwind.config.js
frontend/coming-soon/public/assets/clouds/: cloud.aseprite
frontend/coming-soon/public/assets/corner/: cozy-corner.aseprite  github-cup.aseprite
frontend/coming-soon/public/assets/plant/: plant.aseprite
frontend/coming-soon/src/: App.css  App.jsx  index.css
frontend/coming-soon/src/components/decor/: CozyCorner.jsx  CozySocials.jsx  CozyWindow.jsx  PlantDecor.jsx  PottedPlants.jsx
frontend/coming-soon/src/styles/: globals.css
public/assets/corner/: cozy-corner.aseprite  linkedin-cup.aseprite
src/: App.css  App.jsx  index.css
src/api/: axios.js
src/components/decor/: CozySocials.jsx  Floor.jsx
src/components/header/: Header.jsx
src/components/hero/: Hero.jsx  Login.jsx  Register.jsx
src/contexts/: AuthContext.jsx
(+4 files in other folders)
